Philadelphia.StaticResources/styles.css
/* ... */
/* don't show success image in filter parameter ' */
.filterMainContainer .Philadelphia\.Web\.InputView.userSuccess > .inputContainer > input {
    background-image: none;
}

table.Philadelphia\.Web\.HtmlTableBasedTableView th {
    user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    -webkit-user-select: none;
}

/* hover percentage in center of throbber */
.remoteActionsCallerPercentage {
    position: absolute;
    text-align: center;
    width: 100%;
    left: 0;
    top: 37px;
}

/* hover percentage in center of throbber */
.remoteActionsParentContainer {
    display: flex;
    align-items: center;
    flex-direction: column;
}

/* shrink container to fit content */
.remoteActionsDirectContainer {
    position: relative; 
    float: left;
}

.remoteActionsCallerError {
    max-height: 150px;
    max-width: 350px;
    overflow: auto;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer,
.Philadelphia\.Web\.TwoVerticalPanelsWithResizer {
    display: flex; 
    align-items: stretch;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer {
    flex-direction: row;
    overflow-x: hidden;
}

.Philadelphia\.Web\.TwoVerticalPanelsWithResizer {
    flex-direction: column;
    overflow-y: hidden;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer .splitter,
.Philadelphia\.Web\.TwoVerticalPanelsWithResizer .splitter {
    flex: 0 0 18px;
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #eee;
    border: solid 1px #ccc;    
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer .splitter {
    cursor: e-resize;
    background-image: url('drag64rotated.png');
    background-position-y: 50%;
}

.Philadelphia\.Web\.TwoVerticalPanelsWithResizer .splitter {
    cursor: n-resize;
    background-image: url('drag64.png');
    background-position-x: 50%;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer.active > *:nth-child(1),
.Philadelphia\.Web\.TwoVerticalPanelsWithResizer.active > *:nth-child(1) {
    flex-grow: 0;
    flex-shrink: 0;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer.active > *:nth-child(1) {
    overflow-x: auto;
}

.Philadelphia\.Web\.TwoVerticalPanelsWithResizer.active > *:nth-child(1) {
    overflow-y: auto;
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer.active > *:nth-child(3),
.Philadelphia\.Web\.TwoVerticalPanelsWithResizer.active > *:nth-child(3) {
    flex-grow: 0;
    flex-shrink: 0;    
}

.Philadelphia\.Web\.TwoHorizontalPanelsWithResizer.active > *:nth-child(3) {
    overflow-x: auto;
}

.Philadelphia\.Web\.TwoVerticalPanelsWithResizer.active > *:nth-child(3) {
    overflow-y: auto;
}

.anchorWithFontIcon:not(.headerClose) {
    font-family: FontAwesome;
    color: #fff;
    font-size: 15px;
    padding-left: 4px;
    width: 16px;
    height: 16px;    
    max-height: 20px;
}

.anchorWithFontIcon.enabled:not(.headerClose):not(.running) {
    cursor: pointer;
}

.anchorWithFontIcon:not(.headerClose):not(.running):not(.failed) {
    color: white;
}

.anchorWithFontIcon:not(.headerClose):not(.running):not(.enabled) {
    color: #a2a2a2;
}

.anchorWithFontIcon.enabled:not(.headerClose):not(.running) {
    text-shadow: 1px 1px 1px #e8ebff, -1px -1px 1px #e8ebff, -1px 1px 1px #e8ebff, 1px -1px 1px #e8ebff;
    color: #001dff;
}

.anchorWithFontIcon.running:not(.headerClose)::before {
    animation: throbberSpin 1.0s linear infinite;
    content: "";
    display: inline-block;
    color: black;
    visibility: visible;
}

.anchorWithFontIcon.running:not(.headerClose) {
    visibility: hidden; /*otherwise original icon is beneath the spinner*/
}

.anchorWithFontIcon[data-errors-tooltip]:not(.headerClose):not(.running) {
    text-shadow: 1px 1px 1px #ffa0a0, -1px -1px 1px #ffa0a0, -1px 1px 1px #ffa0a0, 1px -1px 1px #ffa0a0;
}
.anchorWithFontIcon.enabled:not(.headerClose):not(.running):hover {
    text-shadow: 2px 2px 3px #e8ebff, -2px -2px 3px #e8ebff, -2px 2px 3px #e8ebff, 2px -2px 3px #e8ebff;
    font-weight: bolder;
}
.anchorWithFontIcon[data-errors-tooltip]:not(.headerClose):not(.running):hover {
    text-shadow: 2px 2px 3px #ffa0a0, -2px -2px 3px #ffa0a0, -2px 2px 3px #ffa0a0, 2px -2px 3px #ffa0a0;
    font-weight: bolder;
}


.Philadelphia\.Web\.InputView.searchBox > .inputContainer > input {
    background-position-x: 0;
    padding-left: 25px;
    background-image: url('Search.png');
    height: 27px;
    background-color: #ffffcc;
    transition: background-color 0.5s;
}

.Philadelphia\.Web\.InputView.searchBox > .inputContainer > input:focus {
    background-color: #ffff4d;
    transition: background-color 0.5s;
}

.Philadelphia\.Web\.InputView.isClearable > .inputContainer > .clearContainer {
    position: relative;
}

.Philadelphia\.Web\.InputView.isEmpty > .inputContainer > .clearContainer, 
.Philadelphia\.Web\.InputView.clickToEditable.viewing > .inputContainer > .clearContainer {
    display: none;
}
        
.Philadelphia\.Web\.InputView > .inputContainer > .clearContainer:after {
    position: absolute;
    content: "";
    font-family: FontAwesome;
    top: 1px;
    left: -14px;
    cursor: pointer;
}

.Philadelphia\.Web\.InputView > .inputContainer > .clearContainer:hover:after {
    font-size: 18px;
    left: -16px;
    top: -2px;
}

.Philadelphia\.Web\.SingleChoiceDropDown .popup {
    box-shadow: 30px 8px 20px -20px rgba(0, 0, 0, 0.25), 
                -30px 8px 20px -20px rgba(0, 0, 0, 0.25), 
                0 20px 20px 0 rgba(0, 0, 0, 0.25);   
    z-index: 2;
    position: absolute;
    background-color: #ffffff; /*so that popup is not semi transparent*/
    top: 20px; /*put it directly under input*/
}

.Philadelphia\.Web\.HorizontalTabbedView {
    display: flex;
    flex-direction: column;
}

.Philadelphia\.Web\.HorizontalTabbedView > .tabHandleContainer {
    display: flex;
	
    -moz-user-select: none;
    user-select: none;
}
/* ... */

